agregué addEventListener a logo superior para que lleve a la página de las casas, creé un título transparente para las tarjetas de los personajes y patronus (hay que agregar el resto yo creo) yyyyyy le di un position: fixed al menú para que se mantenga visible cuando se baja. Todo funcionando ok :D...  Ahora intento hacer tests jojojo

--- a/src/style.css
+++ b/src/style.css
@@ -104,6 +104,7 @@ header {
 .small-logo-box {
   width: 20vw;
   height: 100%;
+  cursor: pointer;
 }
 
 .small-logo-box > img {
@@ -201,8 +202,24 @@ header {
 .card-front > img {
   width: 100%;
   height: 100%;
+  
 }
 
+.transparent-card-title {
+  width: 100%;
+  background-color: grey;
+  opacity: 0.8;
+  height: 10vh;
+  display: inline-block;
+  position: absolute;
+  top: 25rem;
+  color: #2c2a2a;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 1rem;
+  font-weight: 900;
+}
 .card-back {
   position: absolute;
   top: 0;
@@ -242,7 +259,7 @@ header {
 /*Código Menú nuevo*/
 /*Menu Hamburguesa*/
 .nav--top {
-  position: absolute;
+  position: fixed;
   top: 10px;
   left: 100px;
   z-index: 10;
@@ -379,6 +396,10 @@ nav ul {
   grid-column-start: 1;
   grid-column-end: 4;
   height: 60vh;
+}
+
+.grilla:first-child, .grilla:nth-child(2), .grilla:nth-child(3), .grilla:last-child {
+  cursor: pointer;
 }
 
 /*PANTALLA DE VARITAS*/
